--- a/learn.css
+++ b/learn.css
@@ -1,6 +1,15 @@
 *{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 body{
-    font-family: "poppins", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-image: url('2.avif');
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    background-size: ;
+    
 }
