--- a/learn.css
+++ b/learn.css
@@ -6,7 +6,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-image: url('2.avif');
+   
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
@@ -23,4 +23,15 @@ h1{
     font-size: 4rem;
     justify-content: center;
     padding: 20px;
+}
+.big-text{
+    font-size: 6rem;
+    line-height: 1;
+    margin: 0 2rem;
+}
+.countdown-el{
+    text-align: center;
+}
+.countdown-el span{
+
 }
